--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "eslint .",
     "preview": "vite preview"
   },
+ 
+
   "dependencies": {
     "@tailwindcss/vite": "^4.1.16",
     "animate.css": "^4.1.1",
@@ -35,5 +37,8 @@
     "eslint-plugin-react-refresh": "^0.4.22",
     "globals": "^16.4.0",
     "vite": "^7.1.7"
+  },
+  "engines": {
+    "node": "22.17.0"
   }
 }
