--- a/public/netlify.toml
+++ b/public/netlify.toml
@@ -1,15 +1,15 @@
 # Netlify Build Settings for a Vite/React Project
 
 [build]
-  # The command Netlify should run to generate the production build.
+ 
   command = "npm run build"
-  
-  # The directory where Vite places the final static files.
+ 
   publish = "dist"
 
-# Redirect rules to handle client-side routing (React Router)
-# This ensures that deep links (like /my-profile) or refreshes 
-# land on the index.html page instead of a 404 error.
+  
+  [build.environment]
+    NODE_VERSION = "22.17.0"
+ 
 [[redirects]]
   from = "/*"
   to = "/index.html"
